[package]
name = "peternak-aiai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.31"
dirs = "5.0"
rustyline = "14.0"
colored = "2.1"
shlex = "1.3"
yup-oauth2 = "8.3"
open = "5.1.2"
